--- a/app/styles/sass/pages/_gallery.scss
+++ b/app/styles/sass/pages/_gallery.scss
@@ -1,22 +1,11 @@
-.image-container {
+.image-container img {
+  box-shadow: 0 4px 8px 0 #BDBDBD, 0 6px 20px 0 #BDBDBD;
   opacity: 0;
-  transform: translateY(100);
+  transform: translateY(100px);
   @include transition(transform .5s ease, opacity .5s ease);
 
   &.show {
     opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .bricklayer-column-sizer {
-    width: 50%;
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  .bricklayer-column-sizer {
-    width: 33.3%;
+    transform: translateY(0px);
   }
 }
